--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,59 +15,76 @@ h1 {
     font-size: 28px;
 }
 
-.header {
+#header {
     width: 960px;
     margin: auto;
     overflow: auto;
     clear: both;
 }
 
-.main {
+#main {
     background-image: url(../images/concrete-texture.png);
     background-color: #ccc;
     padding: 35px;
     border-top: 2px solid #c0bdbd;
+    overflow: auto;
+    clear: both;
 }
 
-.name {
+#name {
     background-color:#4aaaa5;
     color: #fff;
     float: left;
     padding: 30px;
 }
 
-.links {
+#links {
     background-color: #fff;
     float: right;
-    padding: 30px;
+    text-align: right;
+    padding: 25px 0 0 0;
+    word-spacing: 15px;
+    color: #000;
 }
 
-.links p {
+#links a:link, a:visited, a:hover, a:active {
+    background-color: #4aaaa5;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    display: inline-block;
+}
+
+#links a:hover {
+    text-decoration: none;
+}
+
+#links p {
     color: #777777;
     vertical-align: middle;  
 }
 
-/* Width + Border to get to 960 */
-.primary {
-    width: 958px;
+#primary {
+    width: 960px;
     background-color: #fff;
     margin: auto;
     border: 1px solid #dddddd;
+    box-sizing: border-box; 
 }
 
-.primary-content {
+#primary-content {
     padding: 30px;
     overflow: auto;
     clear: both;
-    line-height: 34px
+    line-height: 34px;
 }
 
-.primary-content h1 {
+#primary-content h1 {
     color: #4aaaa5;
     padding: 0 0 20px 0;
 }
 
-.primary hr {
+#primary hr {
     display: block;
     height: 3px;
     border: 0;
@@ -76,11 +93,11 @@ h1 {
     background-color: #dddddd;
 }
 
-.myphoto {
+#myphoto {
 
 }
 
-.myphoto img {
+#myphoto img {
     width: 200px;
     height: 150px;
     float: left;
@@ -88,16 +105,16 @@ h1 {
     margin: 10px 0 0 0;
 }
 
-.description {
+#description {
     float: left;
     font-size: 16px;
 }
 
-.description p {
+#description p {
     margin-bottom: 30px;
 }
 
-.footer {
+#footer {
     background-color: #666666;
     color: #ccc;
     padding: 35px 0 5px 0;
@@ -109,4 +126,61 @@ h1 {
     bottom: 0;
     right: 0;
     width: 100%;
+}
+
+.port-input {
+    width: 100%;
+    padding: 10px 10px 10px 10px;
+    margin: 5px 0;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.port-textarea {
+    width: 100%;
+    padding: 10px 10px 10px 10px;
+    margin: 5px 0;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    box-sizing: border-box; 
+}
+
+.port-submit input[type=button], input[type=submit], input[type=reset] {
+    background-color: #4aaaa5;
+    border: none;
+    color: white;
+    padding: 12px 36px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.portfolio {
+    position: relative;
+    text-align: center;
+    color: white;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    clear: both;
+    margin: -15px;
+}
+
+.portfolio-item {
+    width: 300px;
+    height: 225px;
+    position: relative;
+    float: left;
+    margin: 15px;
+}
+
+.portfolio-item p {
+    color: #fff;
+    position: absolute;
+    bottom: 10px;
+    line-height: 50px;
+    left: 0;
+    width: 100%;
+    background-color: #4aaaa5;
 }
