--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,11 @@ h1 {
     margin-bottom: 30px;
 }
 
+#description ul {
+    list-style-type: square;
+    padding: 0 0 0 25px;
+}
+
 #footer {
     background-color: #666666;
     color: #ccc;
