--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,14 @@
     outline: 0;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    height: 100%;
 }
 
 h1 {
@@ -29,6 +34,7 @@ h1 {
     border-top: 2px solid #c0bdbd;
     overflow: auto;
     clear: both;
+    height: 100%;
 }
 
 #name {
