--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* I ended up resetting the default values to 0 - made it easier to 
+format the rest and see exactly what padding / margins / etc were 
+doing */
 * {
     margin: 0; 
     padding: 0; 
@@ -5,6 +8,7 @@
     outline: 0;
 }
 
+/* Entire Page */
 html {
     height: 100%;
 }
@@ -20,6 +24,7 @@ h1 {
     font-size: 28px;
 }
 
+/* Header */
 #header {
     width: 960px;
     margin: auto;
@@ -27,23 +32,7 @@ h1 {
     clear: both;
 }
 
-#main {
-    background-image: url(../images/concrete-texture.png);
-    background-color: #ccc;
-    padding: 35px;
-    border-top: 2px solid #c0bdbd;
-    overflow: auto;
-    clear: both;
-    min-height: 100%;
-}
-
-#name {
-    background-color:#4aaaa5;
-    color: #fff;
-    float: left;
-    padding: 30px;
-}
-
+/* Links within the header */
 #links {
     background-color: #fff;
     float: right;
@@ -70,6 +59,26 @@ h1 {
     vertical-align: middle;  
 }
 
+/* Primary content on the page */
+#main {
+    background-image: url(../images/concrete-texture.png);
+    background-color: #ccc;
+    padding: 35px;
+    border-top: 2px solid #c0bdbd;
+    overflow: auto;
+    clear: both;
+    min-height: 100%;
+}
+
+/* Header on each page */
+#name {
+    background-color:#4aaaa5;
+    color: #fff;
+    float: left;
+    padding: 30px;
+}
+
+/* Primary section where the real content goes */
 #primary {
     width: 960px;
     background-color: #fff;
@@ -99,6 +108,7 @@ h1 {
     background-color: #dddddd;
 }
 
+/* Specific for the initial image */
 #myphoto {
 
 }
@@ -111,6 +121,7 @@ h1 {
     margin: 10px 0 0 0;
 }
 
+/* Specific for description - need to wrap that text */
 #description {
     float: left;
     font-size: 16px;
@@ -125,20 +136,7 @@ h1 {
     padding: 0 0 0 25px;
 }
 
-#footer {
-    background-color: #666666;
-    color: #ccc;
-    padding: 35px 0 5px 0;
-    text-align: center;
-    vertical-align: bottom;
-    border-top: 6px solid #4aaaa5;
-    font-size: 12px;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-}
-
+/* Form Fields */
 .port-input {
     width: 100%;
     padding: 10px 10px 10px 10px;
@@ -167,6 +165,7 @@ h1 {
     cursor: pointer;
 }
 
+/* Primary portfolio container */
 .portfolio {
     position: relative;
     text-align: center;
@@ -178,6 +177,7 @@ h1 {
     margin: -15px;
 }
 
+/* Individual portfolio item */
 .portfolio-item {
     width: 300px;
     height: 225px;
@@ -186,6 +186,7 @@ h1 {
     margin: 15px;
 }
 
+/* Individual portfolio text */
 .portfolio-item p {
     color: #fff;
     position: absolute;
@@ -194,4 +195,19 @@ h1 {
     left: 0;
     width: 100%;
     background-color: #4aaaa5;
+}
+
+/* Footer */
+#footer {
+    background-color: #666666;
+    color: #ccc;
+    padding: 35px 0 5px 0;
+    text-align: center;
+    vertical-align: bottom;
+    border-top: 6px solid #4aaaa5;
+    font-size: 12px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 100%;
 }
