--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,29 +109,25 @@ h1 {
 }
 
 /* Specific for the initial image */
-#myphoto {
-
-}
-
 #myphoto img {
     width: 200px;
-    height: 150px;
+    height: 200px;
     float: left;
     padding: 0 25px 0 0;
     margin: 10px 0 0 0;
 }
 
 /* Specific for description - need to wrap that text */
-#description {
+.description {
     float: left;
     font-size: 16px;
 }
 
-#description p {
+.description p {
     margin-bottom: 30px;
 }
 
-#description ul {
+.description ul {
     list-style-type: square;
     padding: 0 0 0 25px;
 }
